INREL-6872 fix Star sign Images are to small on Mobile

--- a/sass/mixins/_mixins.teasers.scss
+++ b/sass/mixins/_mixins.teasers.scss
@@ -331,12 +331,6 @@
   }
 
   @media (max-width: $screen-xs-max) {
-    .teaser__img-container {
-      img {
-        max-width: 40%;
-      }
-    }
-
     .teaser__caption {
       position: static;
     }
